--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <title>Document</title>
   </head>
   <body>
+    <h1>Pomodoro Timer</h1>
+    <p>00:00</p>
+    <button>Start</button>
+    <button>Cancel</button>
     <script src="app.js"></script>
   </body>
 </html>
