--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   </head>
   <body>
     <h1>Pomodoro Timer</h1>
-    <p>00:00</p>
-    <button>Start</button>
-    <button>Cancel</button>
+    <p id="timer"></p>
+    <button id="startButton">Start</button>
+    <button id="cancelButton">Cancel</button>
     <script src="app.js"></script>
   </body>
 </html>
