Started decrease seconds function

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <h1>Pomodoro Timer</h1>
-    <p id="timer"></p>
+    <p id="timer">25:00</p>
     <button id="startButton">Start</button>
     <button id="cancelButton">Cancel</button>
     <script src="app.js"></script>
